# realpy-core

./: .gitignore  MANIFEST.in  README.md  azure-pipelines.yml  main_space.py  setup.cfg  setup.py  test_main.py  test_space.py
$HOME/: .pypirc
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  stalemate.yml
doc/: modules.md
example/: test_main.py
example/Space/: __init__.py  spaceships.py
realpy/: __constants.py  __function.py  __init__.py  stage.py  test_space.py
realpy/RsCore/: assets.py  constants.py  containers.py  containers.pyi  layer.pyi  prefab.py  prefab.pyi  scene.pyi  utility.py
realpy/arithmetic/: __init__.py  header.py
realpy/asset/: __init__.py  __init__.pyi  instance.py  room.py
realpy/behavior/: __init__.py  actor.py  header.py  instance.py
realpy/camera/: __init__.py  __init__.pyi
realpy/collisionfield/: __init__.py
realpy/constants/: header.py
realpy/core/: __init__.py  function_input.py  function_instance.py  function_scene.py
realpy/framework/: __init__.py  __init__.pyi  header.py
realpy/image/: __init__.py  header.py
realpy/layer/: __init__.py  __init__.pyi  header.py
realpy/prefab/: __init__.py  __init__.pyi  backend.py  header.py  instance.py  primitive.py
realpy/preset/: __init__.py  __init__.pyi  header.py
realpy/scene/: __init__.py  __init__.pyi  header.py
realpy/sprite/: __init__.py  __init__.pyi  header.py  primitive.py
realpy/tests/: test_realpy.py
realpy/utility/: __init__.py  __init__.pyi  (+1 more)
src/: README.md  setup.py  test_main.py
tests/: test_main.py  test_realpy.py  unit_test.py
(+43 files in other folders)
