[metadata]
name = realpy-iconer
version = 1.0.0
author = Iconerworks
author_email = yoyofa2@hotmail.com
license_files = LICENSE
description = 2D game engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RealPy-Engine/realpy-core
project_urls =
    Bug Tracker = https://github.com/RealPy-Engine/realpy-core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9